   * new attack animations: goblin impaler, orcish slurbow & archer elder mage
   * new attack icons: bow, dark missile, druid staff, elven sword, entangle,
     frenzy, lance, mace, morning star, mud glob, orcish dagger, orcish
     greatsword, orcish sword, pincers, plaguestaff, string, thorns, torch, 
     touch, wail, zombie touch
   * hitpoint distribution graphs under Damage Calculations
 * multiplayer maps:
   * added multiplayer maps: 8p Morituri
   * revised multiplayer maps: Blitz, Charge, Cynsaun Battlefield, Den of Onis,
     Hamlets, Hornshark Island, Silverhead Crossing, Sullas Ruins, Island of the
     Horatii, 3p Morituri, Lagoon, The Wilderlands
* music & sound
   * new or improved sounds: thunderstick and dragonstick, fist, club, hatchet,
     throwing knives, walking corpse hit, bow, orcish bow, fire bow, wolf bite,
     claws, wose attack, wose hit, wose death, dwarf hit, dwarf death, sling,
     crossbow, fire crossbow
   * minor edits to several sounds
   * support for randomly chosen variations of sounds
 * language and i18n:
   * new translations: Galego
   * updated translations: Czech, Dutch, Finnish, French, German, Italian,
     Korean, Norwegian, Portuguese (Brazil), Romanian, Spanish, Swedish, Turkish
   * updated man pages: Swedish
   * updated manual: Swedish
 * units
   * fixed the resistances of the Sky Drake line
   * increased the holy resistance for units with holy attacks to 40% for level 2
     and 60% for level 3
 * Wesnoth engine
   * new unit display graphic engine...
   * added unit cost to help
 * WML improvements
   * interpret the variables/arrays in a few more tags
   * floating damage/heal or status can be printed over a modified unit using
     the 'text', 'red', 'blue', and 'green' keys in [unstore_unit]
 * multiplayer settings:
   * two additional MP timer settings, time reservoir limit and action bonus:
     * Reservoir prevents the turn timer from exceeding an upper limit.